[gd_scene load_steps=17 format=3 uid="uid://dlduotq7sqyck"]

[ext_resource type="Texture2D" uid="uid://bqekb6645nxgy" path="res://assets/character/npc/ignis/ignis.png" id="1_4eppj"]
[ext_resource type="Script" path="res://npc.gd" id="1_srfe7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxer"]
atlas = ExtResource("1_4eppj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob45f"]
atlas = ExtResource("1_4eppj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_de56d"]
atlas = ExtResource("1_4eppj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dj2v"]
atlas = ExtResource("1_4eppj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxyhl"]
atlas = ExtResource("1_4eppj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnlme"]
atlas = ExtResource("1_4eppj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7n6g"]
atlas = ExtResource("1_4eppj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvf0n"]
atlas = ExtResource("1_4eppj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7fib"]
atlas = ExtResource("1_4eppj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72fj1"]
atlas = ExtResource("1_4eppj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c4mn"]
atlas = ExtResource("1_4eppj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n6buf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob45f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de56d")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dj2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxyhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnlme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7n6g")
}],
"loop": true,
"name": &"n-walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7fib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72fj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c4mn")
}],
"loop": true,
"name": &"s-walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ec3r"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yilnq"]
radius = 21.2132

[node name="npc" type="CharacterBody2D"]
script = ExtResource("1_srfe7")

[node name="npc_spite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_n6buf")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 6)
shape = SubResource("CircleShape2D_4ec3r")

[node name="dialogue_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dialogue_detection_area"]
shape = SubResource("CircleShape2D_yilnq")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="dialogue_detection_area" to="." method="_on_dialogue_detection_area_body_entered"]
[connection signal="body_exited" from="dialogue_detection_area" to="." method="_on_dialogue_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
